--- a/lib/views/files.html
+++ b/lib/views/files.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>File Manager</title>
+  <link rel="icon" type="image/x-icon" href="/images/systemfilemanager.ico">
 
   <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
@@ -12,6 +13,7 @@
   <script src="//cdn.bootcss.com/angular.js/1.4.5/angular.min.js"></script>
   <script src="js/angular-file.js"></script>
   <script src="js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
 
   <style type="text/css">
     .sortable {
@@ -118,6 +120,9 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="#">File Manager</a>
       </div>
+      <div class="navbar-right">
+        <button class="btn btn-danger navbar-btn" onclick=logout()>Logout</button>
+      </div>
     </div>
   </nav>
 
@@ -172,5 +177,16 @@
 
   </div>
 
+  <script>
+    function logout() {
+      axios.get('/logout')
+        .then(function (response) {
+          window.location.href = '/';
+        })
+        .catch(function (error) {
+          console.log(error);
+        });
+    }
+  </script>
 </body>
 </html>
